--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         INTERVIEWS
       </div>
       <div class="nav_menu_btn">
-        =
-        <!-- <img src="assets/images/menu_btn.png"/> -->
+        <img src="assets/images/menu_button.png"/>
       </div>
     </div>
   </header>
@@ -80,21 +79,20 @@
     </div>
     <div class="more_about">
       <div class="info">
-        <div class="left">
-            취향 제 일 프로젝트의 <br/>기획자를 소개합니다.
+        <div class="intro">
+            취향 제 일 프로젝트의 기획자를 소개합니다.
         </div>
-        <div class="right">
+        <div class="desc">
           여성 창업지원기관에서 일을 한 경험이 있는 <span class='bold'>지연</span><br/>
           음악 플랫폼 에디터와 콘텐츠 마케터로 일하는 <span class='bold'>은해</span><br/>
-          페미니즘 미디어 비평을 하다가 페미니즘과 인류학을 공부하며 <br/>
-          사람들을 만나고 글을 쓰는 <span class="bold">유민</span> 
+          페미니즘 미디어 비평을 하다가 페미니즘과 인류학을 공부하며 사람들을 만나고 글을 쓰는 <span class="bold">유민</span> 
   
         </div>
       </div>
-      <div class="more_about_btn">
+      <!-- <div class="more_about_btn">
         <div>MORE</div>
         <div>-></div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="container interview">
@@ -113,7 +111,7 @@
               인터뷰 보러가기
             </div>
             <span class='arrow'>
-              =>
+              <img src="assets/images/arrow_white.png"/>
             </span>
           </div>
           <div class="item">item2
@@ -123,6 +121,9 @@
             <div class="view">
 
             </div>
+            <span class='arrow'>
+              <img src="assets/images/arrow_white.png"/>
+            </span>
           </div>
         </div>
         <div class="col">
@@ -133,6 +134,9 @@
             <div class="view">
 
             </div>
+            <span class='arrow'>
+              <img src="assets/images/arrow_white.png"/>
+            </span>
           </div>
           <img src="assets/images/work.png"/>
           <div class="item">item4
@@ -142,6 +146,9 @@
             <div class="view">
 
             </div>
+            <span class='arrow'>
+              <img src="assets/images/arrow_white.png"/>
+            </span>
           </div>
         </div>
         <div class="col">
@@ -153,6 +160,9 @@
             <div class="view">
 
             </div>
+            <span class='arrow'>
+                <img src="assets/images/arrow_white.png"/>
+              </span>
           </div>
           <img src="assets/images/sponser.png"/>
         </div>
@@ -165,7 +175,7 @@
 
             </div>
             <span class='arrow'>
-              =>
+              <img src="assets/images/arrow_white.png"/>
             </span>
           </div>
           <div class="item">item7
@@ -175,6 +185,9 @@
             <div class="view">
 
             </div>
+            <span class='arrow'>
+              <img src="assets/images/arrow_white.png"/>
+            </span>
           </div>
         </div>
       </div>
@@ -182,7 +195,9 @@
     <div class="footer_interview">
       <div class="more_btn">
         <div>모든 인터뷰 보러가기</div>
-        <div>-></div>
+        <div>
+          <img src="assets/images/arrow_white.png"/>
+        </div>
       </div>
     </div>
   </div>
