--- a/index.html
+++ b/index.html
@@ -8,16 +8,57 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="owl.theme.default.css">
+  <link href="./assets//fonts/stylesheet.css" rel="stylesheet">
+
   
   <!-- <link rel="stylesheet" href="owl.carousel.min.css">
   <link rel="stylesheet" href="owl.theme.default.min.css"> -->
   <style>
     @font-face {font-family: "Quicksand-Light"; src: url("./assets/fonts/Quicksand-Light.ttf");}
     @font-face {font-family: "Quicksand-Regular"; src: url("./assets/fonts/Quicksand-Regular.ttf");}
-    @font-face {font-family: "NotoSerifKR-SemiBold"; src: url("./assets/fonts/NotoSerifKR-SemiBold.otf");}
-    @font-face {font-family: "NotoSerifKR-Regular"; src: url("./assets/fonts/NotoSerifKR-Regular.otf");}
-    @font-face {font-family: "NotoSerifKR-Bold"; src: url("./assets/fonts/NotoSerifKR-Bold.otf");}
-    @font-face {font-family: "MinionPro-Regular"; src: url("./assets/fonts/MinionPro-Regular.otf");}
+    /* @font-face {font-family: "NotoSerifKR-SemiBold"; src: url("./assets/fonts/NotoSerifKR-SemiBold.woff") format('woff'),;}
+    @font-face {font-family: "NotoSerifKR-Regular"; src: url("./assets/fonts/NotoSerifKR-Regular.woff") format('woff'),;}
+    @font-face {font-family: "NotoSerifKR-Bold"; src: url("./assets/fonts/NotoSerifKR-Bold.woff") format('woff'),;}
+    @font-face {font-family: "MinionPro-Regular"; src: url("./assets/fonts/MinionPro-Regular.woff") format('woff'),;} */
+    /* noto-serif-kr-regular - korean */
+    @font-face {
+      font-family: 'NotoSerifKR-Regular';
+      font-style: normal;
+      font-weight: 400;
+      src: url('./assets/fonts/noto-serif-kr-v15-korean-regular.eot'); /* IE9 Compat Modes */
+      src: local(''),
+          url('./assets/fonts/noto-serif-kr-v15-korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('./assets/fonts/noto-serif-kr-v15-korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
+          url('./assets/fonts/noto-serif-kr-v15-korean-regular.woff') format('woff'), /* Modern Browsers */
+          url('./assets/fonts/noto-serif-kr-v15-korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('./assets/fonts/noto-serif-kr-v15-korean-regular.svg#NotoSerifKR') format('svg'); /* Legacy iOS */
+    }
+    /* noto-serif-kr-600 - korean */
+    @font-face {
+      font-family: 'NotoSerifKR-SemiBold';
+      font-style: normal;
+      font-weight: 600;
+      src: url('./assets/fonts/noto-serif-kr-v15-korean-600.eot'); /* IE9 Compat Modes */
+      src: local(''),
+          url('./assets/fonts/noto-serif-kr-v15-korean-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('./assets/fonts/noto-serif-kr-v15-korean-600.woff2') format('woff2'), /* Super Modern Browsers */
+          url('./assets/fonts/noto-serif-kr-v15-korean-600.woff') format('woff'), /* Modern Browsers */
+          url('./assets/fonts/noto-serif-kr-v15-korean-600.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('./assets/fonts/noto-serif-kr-v15-korean-600.svg#NotoSerifKR') format('svg'); /* Legacy iOS */
+    }
+    /* noto-serif-kr-700 - korean */
+    @font-face {
+      font-family: 'NotoSerifKR-Bold';
+      font-style: normal;
+      font-weight: 700;
+      src: url('./assets/fonts/noto-serif-kr-v15-korean-700.eot'); /* IE9 Compat Modes */
+      src: local(''),
+          url('./assets/fonts/noto-serif-kr-v15-korean-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+          url('./assets/fonts/noto-serif-kr-v15-korean-700.woff2') format('woff2'), /* Super Modern Browsers */
+          url('./assets/fonts/noto-serif-kr-v15-korean-700.woff') format('woff'), /* Modern Browsers */
+          url('./assets/fonts/noto-serif-kr-v15-korean-700.ttf') format('truetype'), /* Safari, Android, iOS */
+          url('./assets/fonts/noto-serif-kr-v15-korean-700.svg#NotoSerifKR') format('svg'); /* Legacy iOS */
+    }
   </style>
 </head>
 <body>
