--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         items:1,
         loop:true,
         margin:10,
-        // autoplay:true,
+        autoplay:true,
         autoplayTimeout:10000,
       });
     });
