--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         About Us
       </div>
       <div class="nav_interview">
-        INTERVIEWS
+        Interviews
       </div>
-      <div class="nav_menu_btn">
+      <a class="nav_menu_btn" href="1.html">
         <img src="assets/images/menu_button.png"/>
-      </div>
+      </a>
     </div>
   </header>
   <div class="container carousel">
@@ -83,9 +83,8 @@
       <div class="content"> 
         <!-- <img src='./assets/images/main1.jpg'/> -->
         <div class="desc_main_1">
-            “취향은 정확하게 설명하기 어렵죠. <br/>
-            나는 이게 좋은데 넌 안 좋아? 이렇게 밖에<br/>
-            이야기할 수 없는 거잖아요.”
+            “사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. <br/>
+            그래서 더 많이 노출시키려고 해요.”
         </div>
         <div class="more_main_1">
           <div class="more_btn">
@@ -99,7 +98,9 @@
       <div class="content"> 
         <img src='./assets/images/main2.jpg'/>
       </div>
-      <div class="content"> content3</div>
+      <div class="content">
+        content3
+      </div>
       <div class="content"> content4</div>
       <div class="content"> content5</div>
       <div class="content"> content6</div>
@@ -273,8 +274,8 @@
       </div>
     </div>
   </div>
-
-  <footer>
+<footer>
+  <div class="footer">
     <div class="container">
       <div class="left">
         <div class="title_footer">
@@ -338,10 +339,10 @@
 
     </div>
 
-  </footer>
-
+  </div>
+</footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="./assets/js/owl.carousel.js"></script>
   <script>
     $(document).ready(function(){
       $(".owl-carousel").owlCarousel({
@@ -371,13 +372,13 @@
     $(document).ready(function(){ 
       $(window).scroll(function(){ 
         if($(window).scrollTop() <= height){
-          $('.content img').css("opacity", 1 - $(window).scrollTop() / height )
-          $('body').css("background", `rgb(0,0,0,${1 - $(window).scrollTop() / height})` )
+          // $('.content img').css("opacity", 1 - $(window).scrollTop() / height )
+          $('body').css("background", `rgb(0,0,0,0)` )
 
         }else if($(window).scrollTop()>height && $(window).scrollTop()<3235){
           $('body').css("background", `rgb(0,0,0,${($(window).scrollTop()-height) / height})` )
         }else{
-          $('body').css("background", `rgb(0,0,0,${1 - ($(window).scrollTop()-3235) /617})` )
+          // $('body').css("background", `rgb(0,0,0,${1 - ($(window).scrollTop()-3235) /617})` )
         }
       }) 
     })
@@ -413,6 +414,13 @@
         }
       }) 
     }) 
+    $(document).ready(function(){ 
+      $('.owl-carousel .owl-dots button').hover(function() {
+        // console.log('adf')
+        $(this).click();
+      }, function() {});
+    }
+    )
 
     //스크롤 방향 감지+ work 아이콘 흔들림
     window.__scrollPosition = document.documentElement.scrollTop || 0;
