--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="owl.theme.default.css">
-  <link href="./assets//fonts/stylesheet.css" rel="stylesheet">
 
   
   <!-- <link rel="stylesheet" href="owl.carousel.min.css">
@@ -80,13 +79,12 @@
   </header>
   <div class="container carousel">
     <div class="owl-carousel owl-theme">
-      <div class="content"> 
-        <!-- <img src='./assets/images/main1.jpg'/> -->
-        <div class="desc_main_1">
+      <div class="content main1"> 
+        <div class="desc_main">
             “사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. <br/>
             그래서 더 많이 노출시키려고 해요.”
         </div>
-        <div class="more_main_1">
+        <div class="more_main">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -95,16 +93,91 @@
           </div>
         </div>
       </div>
-      <div class="content"> 
-        <img src='./assets/images/main2.jpg'/>
+      <div class="content main2"> content2
+        <div class="desc_main">
+            “남과 다른 나를 찾고 그것을 남들에게 보여주고 <br/>
+            내가 이렇게 할 수 있다고 이야기하는 게 중요해요.”
+        </div>
+        <div class="more_main">
+          <div class="more_btn">
+            <div>MORE</div>
+            <div>
+              <img src="assets/images/arrow_white.png" alt="">
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="content">
-        content3
+      <div class="content main3"> content3
+        <div class="desc_main">
+            “취향은 정확하게 설명하기 어렵죠.<br/>
+            ‘나는 이게 좋은데 넌 안 좋아?’<br/>
+            이렇게 밖에 이야기할 수 없는 거잖아요.”
+        </div>
+        <div class="more_main">
+          <div class="more_btn">
+            <div>MORE</div>
+            <div>
+              <img src="assets/images/arrow_white.png" alt="">
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="content"> content4</div>
-      <div class="content"> content5</div>
-      <div class="content"> content6</div>
-      <div class="content"> content7</div>
+      <div class="content main4"> content4
+        <div class="desc_main">
+            “여성 본인이 아름다워질 필요는 없어요.<br/>
+            주위의 아름다움을 발견할 수 있는 사람이<br/>
+            아름다운 사회를 만들어 나가는 거죠.” 
+        </div>
+        <div class="more_main">
+          <div class="more_btn">
+            <div>MORE</div>
+            <div>
+              <img src="assets/images/arrow_white.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="content main5"> content5
+        <div class="desc_main">
+            “저희는 항상 진심이거든요.”
+        </div>
+        <div class="more_main">
+          <div class="more_btn">
+            <div>MORE</div>
+            <div>
+              <img src="assets/images/arrow_white.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="content main6"> content6
+        <div class="desc_main">
+            “제품 자체를 떠나서<br/>
+            나만의 스타일로 소화할 수 있다면 다 좋아요.”
+        </div>
+        <div class="more_main">
+          <div class="more_btn">
+            <div>MORE</div>
+            <div>
+              <img src="assets/images/arrow_white.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="content main7"> content7
+        <div class="desc_main">
+            “이게 당장 생계의 문제라<br/>
+            늘 변화의 흐름을 예민하게 봐야 돼요.”
+        </div>
+        <div class="more_main">
+          <div class="more_btn">
+            <div>MORE</div>
+            <div>
+              <img src="assets/images/arrow_white.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
       </div>
   </div>
   <div class="container about">
@@ -158,7 +231,7 @@
               되게 중요해요.
             </div>
             <div class="view">
-              소목장 세미의<br>
+              <span class="bold">소목장 세미</span>의<br>
               인터뷰 보러가기
             </div>
             <span class='arrow'>
