feat. 카드이미지 추가

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
               내가 아름다울 필요는 없다. 하지만 내 주변은 아름다울 필요는 있다.
             </div>
             <div class="view">
-              나이스샵 은하의<br/>
+                <span class="bold">나이스샵 은하</span>의<br/>
               인터뷰 보러가기
             </div>
             <span class='arrow'>
@@ -265,7 +265,7 @@
                 사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. 저는 자꾸 보니까 더 예쁜데 처음 보는 사람들은 이게 뭐야?라고 하죠. 그래서 더 많이 노출시키려고 해요.
             </div>
             <div class="view">
-              랍스터룸 유빈의<br/>
+                <span class="bold">랍스터룸 유빈</span>의<br/>
               인터뷰 보러가기
             </div>
             <span class='arrow'>
@@ -279,7 +279,8 @@
               
             </div>
             <div class="view">
-
+              <span class="bold">바이부</span>의<br/>
+              인터뷰 보러가기
             </div>
             <span class='arrow'>
               <img class='arrow_white' src="assets/images/arrow_white.png"/>
@@ -288,7 +289,8 @@
           </div>
         </div>
         <div class="col">
-          <img src="assets/images/logo_big.png"/>
+          <div class="logo_big"></div>
+          <!-- <img src="assets/images/logo_big.png"/> -->
           <div class="item item5">
             <div class="subject">
               취향을 브랜딩화하기
@@ -297,7 +299,7 @@
               뭔가 파는 것과 취향은 확실히 차별점이 있는 것 같아요.
             </div>
             <div class="view">
-              포근반짝의<br/>
+              <span class="bold">포근반짝</span>의<br/>
               인터뷰 보러가기
             </div>
             <span class='arrow'>
@@ -315,7 +317,7 @@
                 취향은 정확하게 설명하기 어렵죠. 나는 이게 좋은데 넌 안 좋아? 이렇게 밖에 이야기할 수 없는 거잖아요.
             </div>
             <div class="view">
-              오드 스튜디오 서울 주혜의<br/>
+              <span class="bold">오드 스튜디오 서울 주혜</span>의<br/>
               인터뷰 보러가기
             </div>
             <span class='arrow'>
@@ -328,7 +330,8 @@
               
             </div>
             <div class="view">
-
+              <span class="bold">다정하게</span>의<br/>
+              인터뷰 보러가기
             </div>
             <span class='arrow'>
               <img class='arrow_white' src="assets/images/arrow_white.png"/>
