--- a/index.html
+++ b/index.html
@@ -6,59 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>취향제일</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="fonts.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="owl.theme.default.css">
 
-  
-  <!-- <link rel="stylesheet" href="owl.carousel.min.css">
-  <link rel="stylesheet" href="owl.theme.default.min.css"> -->
-  <style>
-    @font-face {font-family: "Quicksand-Light"; src: url("./assets/fonts/Quicksand-Light.ttf");}
-    @font-face {font-family: "Quicksand-Regular"; src: url("./assets/fonts/Quicksand-Regular.ttf");}
-    /* @font-face {font-family: "NotoSerifKR-SemiBold"; src: url("./assets/fonts/NotoSerifKR-SemiBold.woff") format('woff'),;}
-    @font-face {font-family: "NotoSerifKR-Regular"; src: url("./assets/fonts/NotoSerifKR-Regular.woff") format('woff'),;}
-    @font-face {font-family: "NotoSerifKR-Bold"; src: url("./assets/fonts/NotoSerifKR-Bold.woff") format('woff'),;}
-    @font-face {font-family: "MinionPro-Regular"; src: url("./assets/fonts/MinionPro-Regular.woff") format('woff'),;} */
-    /* noto-serif-kr-regular - korean */
-    @font-face {
-      font-family: 'NotoSerifKR-Regular';
-      font-style: normal;
-      font-weight: 400;
-      src: url('./assets/fonts/noto-serif-kr-v15-korean-regular.eot'); /* IE9 Compat Modes */
-      src: local(''),
-          url('./assets/fonts/noto-serif-kr-v15-korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('./assets/fonts/noto-serif-kr-v15-korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-          url('./assets/fonts/noto-serif-kr-v15-korean-regular.woff') format('woff'), /* Modern Browsers */
-          url('./assets/fonts/noto-serif-kr-v15-korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('./assets/fonts/noto-serif-kr-v15-korean-regular.svg#NotoSerifKR') format('svg'); /* Legacy iOS */
-    }
-    /* noto-serif-kr-600 - korean */
-    @font-face {
-      font-family: 'NotoSerifKR-SemiBold';
-      font-style: normal;
-      font-weight: 600;
-      src: url('./assets/fonts/noto-serif-kr-v15-korean-600.eot'); /* IE9 Compat Modes */
-      src: local(''),
-          url('./assets/fonts/noto-serif-kr-v15-korean-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('./assets/fonts/noto-serif-kr-v15-korean-600.woff2') format('woff2'), /* Super Modern Browsers */
-          url('./assets/fonts/noto-serif-kr-v15-korean-600.woff') format('woff'), /* Modern Browsers */
-          url('./assets/fonts/noto-serif-kr-v15-korean-600.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('./assets/fonts/noto-serif-kr-v15-korean-600.svg#NotoSerifKR') format('svg'); /* Legacy iOS */
-    }
-    /* noto-serif-kr-700 - korean */
-    @font-face {
-      font-family: 'NotoSerifKR-Bold';
-      font-style: normal;
-      font-weight: 700;
-      src: url('./assets/fonts/noto-serif-kr-v15-korean-700.eot'); /* IE9 Compat Modes */
-      src: local(''),
-          url('./assets/fonts/noto-serif-kr-v15-korean-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('./assets/fonts/noto-serif-kr-v15-korean-700.woff2') format('woff2'), /* Super Modern Browsers */
-          url('./assets/fonts/noto-serif-kr-v15-korean-700.woff') format('woff'), /* Modern Browsers */
-          url('./assets/fonts/noto-serif-kr-v15-korean-700.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('./assets/fonts/noto-serif-kr-v15-korean-700.svg#NotoSerifKR') format('svg'); /* Legacy iOS */
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -72,9 +23,9 @@
       <div class="nav_interview">
         Interviews
       </div>
-      <a class="nav_menu_btn" href="1.html">
+      <div class="nav_menu_btn">
         <img src="assets/images/menu_button.png"/>
-      </a>
+      </div>
     </div>
   </header>
   <div class="container carousel">
@@ -85,12 +36,14 @@
             그래서 더 많이 노출시키려고 해요.”
         </div>
         <div class="more_main">
+          <a class="nav_menu_btn" href="./1.html">
           <div class="more_btn">
             <div>MORE</div>
             <div>
               <img src="assets/images/arrow_white.png" alt="">
             </div>
           </div>
+          </a>
         </div>
       </div>
       <div class="content main2"> content2
@@ -362,17 +315,17 @@
             <div>About Us</div>
           </div>
           <div class="col">
-            <div class="row">INTERVIEWS</div>
-            <div class="row">INTERVIEW-1</div>
-            <div class="row">INTERVIEW-3</div>
-            <div class="row">INTERVIEW-5</div>
-            <div class="row">INTERVIEW-7</div>
+            <div class="row">Interviews</div>
+            <div class="row">랍스타룸 유빈</div>
+            <div class="row">오드 스튜디오 서울 주혜</div>
+            <div class="row">포근반짝</div>
+            <div class="row">다정하게</div>
           </div>
           <div class="col">
             <div class="row">&nbsp;</div>
-            <div class="row">INTERVIEW-2</div>
-            <div class="row">INTERVIEW-4</div>
-            <div class="row">INTERVIEW-6</div>
+            <div class="row">소목장 세미</div>
+            <div class="row">나이스샵 은하</div>
+            <div class="row">바이부 경민</div>
           </div>
           <div class="col">
             REVIEW
