--- a/1.html
+++ b/1.html
@@ -26,8 +26,8 @@
     </div>
   </header>
   <div class="container title">
-    <img class="page1_title" src="./assets/images/page1_title.png" alt="사랑을 담아, 브랜드화된 취향을 노동하기: 랍스터룸 유민">
-    <img class="page1_img" src="./assets/images/page1_title_image.png" alt="랍스터룸 유민 이미지"/>
+    <img class="page_title" src="./assets/images/page1_title.png" alt="사랑을 담아, 브랜드화된 취향을 노동하기: 랍스터룸 유민">
+    <img class="page_img" src="./assets/images/page1_title_image.png" alt="랍스터룸 유민 이미지"/>
     <div class="desc">
       “사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. <br/>
       저는 자꾸 보니까 더 예쁜데 처음 보는 사람들은 이게 뭐야? 라고 하죠.<br/>
@@ -225,12 +225,12 @@
         </div>
 
         <div class="footer_interview">
-          <div class="more_btn">
+          <a class="more_btn" href="2.html">
             <div>다음 인터뷰 보러가기</div>
             <div>
               <img src="assets/images/arrow_black.png"/>
             </div>
-          </div>
+          </a>
         </div>
       </div>
   </div>
