--- a/index.html
+++ b/index.html
@@ -46,21 +46,23 @@
           </a>
         </div>
       </div>
-      <div class="content main2"> content2
+      <div class="content main2">
         <div class="desc_main">
             “남과 다른 나를 찾고 그것을 남들에게 보여주고 <br/>
             내가 이렇게 할 수 있다고 이야기하는 게 중요해요.”
         </div>
         <div class="more_main">
+            <a class="nav_menu_btn" href="./2.html">
           <div class="more_btn">
             <div>MORE</div>
             <div>
               <img src="assets/images/arrow_white.png" alt="">
             </div>
           </div>
+          </a>
         </div>
       </div>
-      <div class="content main3"> content3
+      <div class="content main3">
         <div class="desc_main">
             “취향은 정확하게 설명하기 어렵죠.<br/>
             ‘나는 이게 좋은데 넌 안 좋아?’<br/>
@@ -75,7 +77,7 @@
           </div>
         </div>
       </div>
-      <div class="content main4"> content4
+      <div class="content main4">
         <div class="desc_main">
             “여성 본인이 아름다워질 필요는 없어요.<br/>
             주위의 아름다움을 발견할 수 있는 사람이<br/>
@@ -90,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="content main5"> content5
+      <div class="content main5">
         <div class="desc_main">
             “저희는 항상 진심이거든요.”
         </div>
@@ -103,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="content main6"> content6
+      <div class="content main6">
         <div class="desc_main">
             “제품 자체를 떠나서<br/>
             나만의 스타일로 소화할 수 있다면 다 좋아요.”
@@ -117,7 +119,7 @@
           </div>
         </div>
       </div>
-      <div class="content main7"> content7
+      <div class="content main7">
         <div class="desc_main">
             “이게 당장 생계의 문제라<br/>
             늘 변화의 흐름을 예민하게 봐야 돼요.”
@@ -184,10 +186,12 @@
               있다고 이야기하는 게
               되게 중요해요.
             </div>
-            <div class="view">
-              <span class="bold">소목장 세미 혜미</span>의<br>
-              인터뷰 보러가기
-            </div>
+            <a class="nav_menu_btn" href="./2.html">
+              <div class="view">
+                <span class="bold">소목장 세미 혜미</span>의<br>
+                인터뷰 보러가기
+              </div>
+            </a>
             <span class='arrow'>
               <img class='arrow_white' src="assets/images/arrow_white.png"/>
               <img class='arrow_black' src="assets/images/arrow_black.png"/>
@@ -221,10 +225,12 @@
             <div class="hidden">
                 사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. 저는 자꾸 보니까 더 예쁜데 처음 보는 사람들은 이게 뭐야?라고 하죠. 그래서 더 많이 노출시키려고 해요.
             </div>
-            <div class="view">
-                <span class="bold">랍스터룸 유빈</span>의<br/>
-              인터뷰 보러가기
-            </div>
+            <a class="nav_menu_btn" href="./2.html">
+              <div class="view">
+                  <span class="bold">랍스터룸 유빈</span>의<br/>
+                인터뷰 보러가기
+              </div>
+            </a>
             <span class='arrow'>
               <img class='arrow_white' src="assets/images/arrow_white.png"/>
               <img class='arrow_black' src="assets/images/arrow_black.png"/>
