--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
   <header>
     <div class="logo">
-      <img src='./assets/images/logo_top.png'/>
+        <a class="nav_menu_btn" href="/">
+          <img src='./assets/images/logo_top.png'/>
+        </a>
     </div>
     <div class="nav">
       <div class="nav_about">
