--- a/1.html
+++ b/1.html
@@ -11,7 +11,9 @@
 <body>
   <header>
     <div class="logo">
-      <img src='./assets/images/logo_top_black.png'/>
+      <a class="nav_menu_btn" href="/">
+        <img src='./assets/images/logo_top_black.png'/>
+      </a>
     </div>
     <div class="nav">
       <div class="nav_about">
