--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                 <span class="bold">소목장 세미 혜미</span>의<br>
                 인터뷰 보러가기
               </div>
+              <span class='arrow'>
+                <img class='arrow_white' src="assets/images/arrow_white.png"/>
+                <img class='arrow_black' src="assets/images/arrow_black.png"/>
+              </span>
             </a>
-            <span class='arrow'>
-              <img class='arrow_white' src="assets/images/arrow_white.png"/>
-              <img class='arrow_black' src="assets/images/arrow_black.png"/>
-            </span>
           </div>
           <div class="item item2">
             <div class="subject">
@@ -232,11 +232,11 @@
                   <span class="bold">랍스터룸 유빈</span>의<br/>
                 인터뷰 보러가기
               </div>
+              <span class='arrow'>
+                <img class='arrow_white' src="assets/images/arrow_white.png"/>
+                <img class='arrow_black' src="assets/images/arrow_black.png"/>
+              </span>
             </a>
-            <span class='arrow'>
-              <img class='arrow_white' src="assets/images/arrow_white.png"/>
-              <img class='arrow_black' src="assets/images/arrow_black.png"/>
-            </span>
           </div>
           <img class="work_icon" src="assets/images/work.png"/>
           <div class="item item4">
@@ -331,16 +331,20 @@
           </div>
           <div class="col">
             <div class="row">Interviews</div>
-            <div class="row">랍스타룸 유빈</div>
+            <a class="more_btn" href="1.html">
+              <div class="row">랍스타룸 유빈</div>
+            </a>
             <div class="row">오드 스튜디오 서울 주혜</div>
-            <div class="row">포근반짝</div>
-            <div class="row">다정하게</div>
+            <div class="row">포근반짝 수미와 진영</div>
+            <div class="row">다정하게 다정</div>
           </div>
           <div class="col">
             <div class="row">&nbsp;</div>
-            <div class="row">소목장 세미</div>
-            <div class="row">나이스샵 은하</div>
-            <div class="row">바이부 경민</div>
+            <a class="more_btn" href="2.html">
+              <div class="row">소목장 세미 혜미</div>
+            </a>
+              <div class="row">나이스샵 은하</div>
+              <div class="row">바이부 경민</div>
           </div>
           <div class="col">
             REVIEW
@@ -349,6 +353,9 @@
         <div class="copyright">
           <div class="l">Copyright 2021. 프리몸 all rights reserved.</div>
           <div class="r">tastefulwork2021@gmail.com</div>
+          <div class="instagram">
+            <img src="./assets/images/instagram.png" alt="">
+          </div>
         </div>
       </div>
       <div class="right">
@@ -366,7 +373,7 @@
             Minyoung Shin<br/>
             Jihyun Kim
           </div>
-          <div class="col">
+          <div class="col names">
             소마 킴<br/>
             신민영<br/>
             김지현
@@ -376,8 +383,8 @@
           본 프로젝트는 여성가족부 2021년 성평등 문화 추진단 지원을 받아 진행되었습니다.
         </div>
         <div class="sponsor_icons">
-          <img src="assets/images/logo_woman.png"  alt="여성가족부 로고"/>
-          <img src="assets/images/logo_butterknife.png" alt="버터나이프 크루 로고">
+          <img class="woman" src="assets/images/logo_woman.png" alt="여성가족부 로고"/>
+          <img class="butterknife" src="assets/images/logo_butterknife.png" alt="버터나이프 크루 로고">
         </div>
       </div>
 
