--- a/index.html
+++ b/index.html
@@ -354,7 +354,9 @@
           <div class="l">Copyright 2021. 프리몸 all rights reserved.</div>
           <div class="r">tastefulwork2021@gmail.com</div>
           <div class="instagram">
-            <img src="./assets/images/instagram.png" alt="">
+            <a href="https://www.instagram.com/tastefulwork/" target="_blank" rel="noopener noreferrer">
+              <img src="./assets/images/instagram.png" alt="">
+            </a>
           </div>
         </div>
       </div>
