--- a/index.html
+++ b/index.html
@@ -467,9 +467,10 @@
         }
       }) 
     }) 
+
+    //mouseover
     $(document).ready(function(){ 
       $('.owl-carousel .owl-dots button').hover(function() {
-        // console.log('adf')
         $(this).click();
       }, function() {});
     }
