--- a/3.html
+++ b/3.html
@@ -66,9 +66,10 @@
           <div class="num">06</div>
           <div class="title">영감</div>
         </div>
-        대학에서 만난 두 친구와 함께  주혜는 오드스튜디오를 운영중이다. 2021년 1월에 문을 연 오드스튜디오는 유튜브에 플레이스트를 업로드하고, 네이버스토어를 통해  휴대폰 액세서리를 제작 판매한다.    유튜브 플레이리스트가 빠른 구독자 증가를 보이며 성장하고 있지만 
-        주혜는 브랜드 운영이 아닌 다른 진로를 탐색 중이다. 인터뷰를 하면서 처음엔 성장하고 있는 브랜드를 두고 새로운 진로를 탐색한다는 점이 의아했다. 왜 돈 버는 수단으로 가져가지 않느냐, 직업으로 가져갈 생각은 없는가에 대한 거듭된 의문에 주혜는 취향과 밀접한 이 일을 대하는 명확한 생각과 태도로 답했다. 그리고 다른 누구도 아닌 스스로를 위한 활동이라는 점에서  주혜는 오드스튜디오가 자신의 취향을 공유하고 자존감을 지켜주는 창구라고 말했다. 
-
+        <div style="padding-top:16px;">
+          대학에서 만난 두 친구와 함께  주혜는 오드스튜디오를 운영중이다. 2021년 1월에 문을 연 오드스튜디오는 유튜브에 플레이스트를 업로드하고, 네이버스토어를 통해  휴대폰 액세서리를 제작 판매한다.    유튜브 플레이리스트가 빠른 구독자 증가를 보이며 성장하고 있지만 
+          주혜는 브랜드 운영이 아닌 다른 진로를 탐색 중이다. 인터뷰를 하면서 처음엔 성장하고 있는 브랜드를 두고 새로운 진로를 탐색한다는 점이 의아했다. 왜 돈 버는 수단으로 가져가지 않느냐, 직업으로 가져갈 생각은 없는가에 대한 거듭된 의문에 주혜는 취향과 밀접한 이 일을 대하는 명확한 생각과 태도로 답했다. 그리고 다른 누구도 아닌 스스로를 위한 활동이라는 점에서  주혜는 오드스튜디오가 자신의 취향을 공유하고 자존감을 지켜주는 창구라고 말했다. 
+        </div>
       </div>
     </div>
 
@@ -105,7 +106,7 @@
     <div class="table">
     <div class="left full noborder">
         <div class="interview_q p3">
-          오드스튜디오를 세 분이서 함께 운영하시죠. 어떤 경험에서 ‘우리가 비슷한 취향을 갖고 있으니까 같이 일해보자.’라고 결정하게 되었는지 궁금해요.
+          초기에는 ‘우리가 좋아하는 거, 취향대로 해보자!’라는 마음에서 출발하신 것 같아요. 그런데 이를 유지하기 위해서는 에너지와 시간이 들죠. 이왕 하는 거 잘하고 싶고, 오리지널리티가 있었으면 좋겠고, 욕심이 많아지게 되잖아요. 
         </div>
       </div>
     </div> 
@@ -164,7 +165,7 @@
         <div class="table">
           <div class="left full noborder">
             <div class="interview_q p3">
-              오드스튜디오를 세 분이서 함께 운영하시죠. 어떤 경험에서 ‘우리가 비슷한 취향을 갖고 있으니까 같이 일해보자.’라고 결정하게 되었는지 궁금해요.
+              직업과 프로젝트를 구분하고자 하는 이유가 있을까요? 둘의 차이점이 있을까요? 
             </div>
           </div>
         </div> 
@@ -212,7 +213,6 @@
 
           <div class="right noborder">
             <div class="interview_title anchor p3">
-                <br/>
                 <br/><br/>
                 <br/><br/>
                 <br/><br/>
@@ -259,7 +259,9 @@
                 <a class="more_btn" href="1.html">
                   <div class="row">랍스타룸 유빈</div>
                 </a>
-                <div class="row">오드 스튜디오 서울 주혜</div>
+                <a class="more_btn" href="3.html">
+                  <div class="row">오드 스튜디오 서울 주혜</div>
+                </a>
                 <div class="row">포근반짝 수미와 진영</div>
                 <div class="row">다정하게 다정</div>
               </div>
