--- a/1.html
+++ b/1.html
@@ -252,7 +252,9 @@
                 <a class="more_btn" href="1.html">
                   <div class="row">랍스타룸 유빈</div>
                 </a>
-                <div class="row">오드 스튜디오 서울 주혜</div>
+                <a class="more_btn" href="3.html">
+                  <div class="row">오드 스튜디오 서울 주혜</div>
+                </a>
                 <div class="row">포근반짝 수미와 진영</div>
                 <div class="row">다정하게 다정</div>
               </div>
