--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="owl-carousel owl-theme">
       <div class="content main1"> 
         <div class="desc_main">
-            “사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. <br/>
-            그래서 더 많이 노출시키려고 해요.”
+          “사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. <br/>
+          그래서 더 많이 노출시키려고 해요.”
         </div>
         <div class="more_main">
           <a class="nav_menu_btn" href="./1.html">
@@ -50,8 +50,8 @@
       </div>
       <div class="content main2">
         <div class="desc_main">
-            “남과 다른 나를 찾고 그것을 남들에게 보여주고 <br/>
-            내가 이렇게 할 수 있다고 이야기하는 게 중요해요.”
+          “남과 다른 나를 찾고 그것을 남들에게 보여주고 <br/>
+          내가 이렇게 할 수 있다고 이야기하는 게 중요해요.”
         </div>
         <div class="more_main">
             <a class="nav_menu_btn" href="./2.html">
@@ -71,12 +71,14 @@
             이렇게 밖에 이야기할 수 없는 거잖아요.”
         </div>
         <div class="more_main">
+            <a class="nav_menu_btn" href="./3.html">
           <div class="more_btn">
             <div>MORE</div>
             <div>
               <img src="assets/images/arrow_white.png" alt="">
             </div>
           </div>
+          </a>
         </div>
       </div>
       <div class="content main4">
@@ -205,7 +207,9 @@
               여성 사이의 긴장
             </div>
             <div class="hidden">
-              내가 아름다울 필요는 없다. 하지만 내 주변은 아름다울 필요는 있다.
+              여성 본인이 아름다워질 필요는 없어요.
+              주위의 아름다움을 발견할 수 있는 사람이
+              아름다운 사회를 만들어 나가는 거죠.
             </div>
             <div class="view">
                 <span class="bold">나이스샵 은하</span>의<br/>
@@ -226,7 +230,7 @@
               노동하기
             </div>
             <div class="hidden">
-                사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. 저는 자꾸 보니까 더 예쁜데 처음 보는 사람들은 이게 뭐야?라고 하죠. 그래서 더 많이 노출시키려고 해요.
+              사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. 그래서 더 많이 노출시키려고 해요.
             </div>
               <div class="view">
                   <span class="bold">랍스터룸 유빈</span>의<br/>
@@ -243,6 +247,10 @@
             <div class="subject">
               나만의 취향, 무드,<br/>
               스타일과 인스타그램
+            </div>
+            <div class="hidden">
+              제품 자체를 떠나서
+              나만의 스타일로 소화할 수 있다면 다 좋아요.
             </div>
             <div class="view">
               <span class="bold">바이부 경민</span>의<br/>
@@ -263,7 +271,7 @@
               취향을 일하기
             </div>
             <div class="hidden">
-              뭔가 파는 것과 취향은 확실히 차별점이 있는 것 같아요.
+              저희는 항상 진심이거든요.
             </div>
             <div class="view">
               <span class="bold">포근반짝 수미와 진영</span>의<br/>
@@ -276,6 +284,7 @@
           <img class="sponsor_icon" src="assets/images/sponsor.png"/>
         </div>
         <div class="col">
+          <a class="nav_menu_btn" href="./1.html">
           <div class="item item6">
             <div class="subject">
               나를 위한 취향, 무드 <br/>
@@ -293,9 +302,13 @@
               <img class='arrow_black' src="assets/images/arrow_black.png"/>
             </span>
           </div>
+          </a>
           <div class="item item7">
             <div class="subject">
               생활로서의 취향
+            </div>
+            <div class="hidden">
+              이게 당장 생계의 문제라 늘 변화의 흐름을 예민하게 봐야 돼요.
             </div>
             <div class="view">
               <span class="bold">다정하게 다정</span>의<br/>
@@ -334,7 +347,9 @@
             <a class="more_btn" href="1.html">
               <div class="row">랍스타룸 유빈</div>
             </a>
-            <div class="row">오드 스튜디오 서울 주혜</div>
+            <a class="more_btn" href="3.html">
+              <div class="row">오드 스튜디오 서울 주혜</div>
+            </a>
             <div class="row">포근반짝 수미와 진영</div>
             <div class="row">다정하게 다정</div>
           </div>
