--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="fonts.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="owl.theme.default.css">
-
+  <link rel="stylesheet" type="text/css" href="footer.css">
 </head>
 <body>
   <header>
@@ -25,9 +25,9 @@
       <div class="nav_interview">
         Interviews
       </div>
-      <div class="nav_menu_btn">
+      <!-- <div class="nav_menu_btn">
         <img src="assets/images/menu_button.png"/>
-      </div>
+      </div> -->
     </div>
   </header>
   <div class="container carousel">
@@ -144,14 +144,15 @@
       About Us
     </div>
     <div class="title_about">
-      그 어느 때보다 <br/>
-      개인의 취향이 중요하게 여겨지는 오늘날, 
+      그 어느 때보다 개인의 취향이 중요하게 여겨지는 오늘날
     </div>
     <div class="desc_about">
-      우리는 취향의 노동화에는 왜 여성들이 주축인지, 그리고 이를 위한 과정은 과연 노동으로 인정되고 있는지 궁금해졌습니다. 
-      그래서 <span class="bold">‘취향을 일로 가져간’ 7명의 여성</span>들에게 물어보았습니다. 
-      그들은 어떻게 이 일을 받아들이고 좋아하는 것들을 탐구하고 타인에게 보여주는지 또 취향을 일로 가져가는 과정에서 
-      어떤 고민과 문제의식을 갖고 있는지 이야기 나눴습니다. 특히 여성이라는 정체성이 취향을 가꾸고 공유하는 데에서 어떤 영향을 주는지 알고 싶어졌습니다.
+      이러한 변화는 취향이 크게 작용하는 노동/일에서 더 선명하게 드러납니다. 일상을 반영한 소셜미디어를 관리하고 자신의 브랜드를 만들어 홍보하는 일, 프리랜서로서의 활동과 성과를 포트폴리오로 효과적으로 보여주는 일,
+      저희는 취미로서의 취향이 아닌, <span class="bold">일로서의 취향이 가져오는 차이</span>에 주목했습니다.<br/><br/>
+
+      '감각, 스타일, 무드'라는 단어는 종종 취향이라는 말로 다시 돌아옵니다. 하지만  <span class="bold">취향을 기반으로 한 일이 정당한 노동으로 여겨지고 있나요? 왜 이러한 영역에서 여성들이 주축이 될까요?</span>
+      좋아하는 것들을 탐구하고 타인에게 보여주는 과정은 어떠한 고민을 가져올까요? 우리는  <span class="bold">'취향을 일로 가져간' 7명의 여성들</span>과 직접 만나 함께 이야기 나눴습니다.
+
     </div>
     <div class="more_about">
       <div class="info">
@@ -159,9 +160,9 @@
             취향 제 일 프로젝트의 기획자를 소개합니다.
         </div>
         <div class="members">
-          여성 창업지원기관에서 일을 한 경험이 있는 <span class='bold'>지연</span><br/>
-          음악 플랫폼 에디터와 콘텐츠 마케터로 일하는 <span class='bold'>은해</span><br/>
-          페미니즘 미디어 비평을 하다가 페미니즘과 인류학을 공부하며 사람들을 만나고 글을 쓰는 <span class="bold">유민</span> 
+          페미니즘과 인류학을 공부하며 사람들을 만나고 글을 쓰는 <span class="bold">유민</span><br/>
+          프리랜스 에디터와 콘텐츠 마케터로 일하고 있는 <span class='bold'>은해</span><br/>
+          여성과 일에 주목하는 사회인 <span class='bold'>지연</span><br/>
   
         </div>
       </div>
@@ -192,7 +193,7 @@
               되게 중요해요.
             </div>
               <div class="view">
-                <span class="bold">소목장 세미 혜미</span>의<br>
+                <span class="bold">소목장세미 혜미</span>의<br>
                 인터뷰 보러가기
               </div>
               <span class='arrow'>
@@ -284,17 +285,17 @@
           <img class="sponsor_icon" src="assets/images/sponsor.png"/>
         </div>
         <div class="col">
-          <a class="nav_menu_btn" href="./1.html">
+          <a class="nav_menu_btn" href="./3.html">
           <div class="item item6">
             <div class="subject">
               나를 위한 취향, 무드 <br/>
               스타일과 인스타그램
             </div>
             <div class="hidden">
-              취향은 정확하게 설명하기 어렵죠. 나는 이게 좋은데 넌 안 좋아? 이렇게 밖에 이야기할 수 없는 거잖아요.
+              취향 공유의 기쁨과 슬픔
             </div>
             <div class="view">
-              <span class="bold">오드 스튜디오 서울 주혜</span>의<br/>
+              <span class="bold">오드스튜디오 주혜</span>의<br/>
               인터뷰 보러가기
             </div>
             <span class='arrow'>
@@ -331,84 +332,85 @@
       </div>
     </div>
   </div>
-<footer>
-  <div class="footer">
-    <div class="container">
-      <div class="left">
-        <div class="title_footer">
-          All Contents
-        </div>
-        <div class="sitemap">
-          <div class="col">
-            <div>About Us</div>
+  <footer>
+    <div class="footer">
+      <div class="container">
+        <div class="left">
+          <div class="title_footer">
+            All Contents
           </div>
-          <div class="col">
-            <div class="row">Interviews</div>
-            <a class="more_btn" href="1.html">
-              <div class="row">랍스타룸 유빈</div>
-            </a>
-            <a class="more_btn" href="3.html">
-              <div class="row">오드 스튜디오 서울 주혜</div>
-            </a>
-            <div class="row">포근반짝 수미와 진영</div>
-            <div class="row">다정하게 다정</div>
-          </div>
-          <div class="col">
-            <div class="row">&nbsp;</div>
-            <a class="more_btn" href="2.html">
-              <div class="row">소목장 세미 혜미</div>
-            </a>
+          <div class="sitemap">
+            <div class="col">
+              <div>About Us</div>
+            </div>
+            <div class="col">
+              <div class="row en">Interviews</div>
+              <a class="more_btn" href="1.html">
+                <div class="row">랍스타룸 유빈</div>
+              </a>
               <div class="row">나이스샵 은하</div>
-              <div class="row">바이부 경민</div>
+              <div class="row">다정하게 다정</div>
+            </div>
+            <div class="col">
+              <div class="row">&nbsp;</div>
+              <a class="more_btn" href="2.html">
+                <div class="row">소목장세미 혜미</div>
+              </a>
+              <div class="row">포근반짝 수미와 진영</div>
+            </div>
+            <div class="col">
+              <div class="row">&nbsp;</div>
+              <a class="more_btn" href="3.html">
+                <div class="row">오드스튜디오 주혜</div>
+              </a>
+              <a class="more_btn" href="4.html">
+                <div class="row">바이부 경민</div>
+              </a>
+            </div>
           </div>
-          <div class="col">
-            REVIEW
+          <div class="copyright">
+            <div class="l">Copyright 2021. 프리몸 all rights reserved.</div>
+            <div class="r">tastefulwork2021@gmail.com</div>
+            <!-- <div class="instagram">
+              <a href="https://www.instagram.com/tastefulwork/" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/images/instagram.png" alt="">
+              </a>
+            </div> -->
           </div>
         </div>
-        <div class="copyright">
-          <div class="l">Copyright 2021. 프리몸 all rights reserved.</div>
-          <div class="r">tastefulwork2021@gmail.com</div>
-          <div class="instagram">
-            <a href="https://www.instagram.com/tastefulwork/" target="_blank" rel="noopener noreferrer">
-              <img src="./assets/images/instagram.png" alt="">
-            </a>
+        <div class="right">
+          <div class="title_footer">
+            도움 주신 분들
+          </div>
+          <div class="helpers">
+            <div class="col">
+              Photographer<br/>
+              Designer<br/>
+              Web Developer
+            </div>
+            <div class="col">
+              Soma Kim<br/>
+              Minyoung Shin<br/>
+              Jihyun Kim
+            </div>
+            <div class="col names">
+              소마 킴<br/>
+              신민영<br/>
+              김지현
+            </div>
+          </div>
+          <div class="sponsor_from">
+            본 프로젝트는 여성가족부 2021년 성평등 문화 추진단 지원을 받아 진행되었습니다.
+          </div>
+          <div class="sponsor_icons">
+            <a href="http://www.mogef.go.kr" target="_blank" rel="noopener noreferrer"></a>
+            <img class="woman" src="assets/images/logo_woman.png" alt="여성가족부 로고"/>
+            <img class="butterknife" src="assets/images/logo_butterknife.png" alt="버터나이프 크루 로고">
           </div>
         </div>
       </div>
-      <div class="right">
-        <div class="title_footer">
-          도움 주신 분들
-        </div>
-        <div class="helpers">
-          <div class="col">
-            Photographer<br/>
-            Designer<br/>
-            Web Developer
-          </div>
-          <div class="col">
-            Soma Kim<br/>
-            Minyoung Shin<br/>
-            Jihyun Kim
-          </div>
-          <div class="col names">
-            소마 킴<br/>
-            신민영<br/>
-            김지현
-          </div>
-        </div>
-        <div class="sponsor_from">
-          본 프로젝트는 여성가족부 2021년 성평등 문화 추진단 지원을 받아 진행되었습니다.
-        </div>
-        <div class="sponsor_icons">
-          <img class="woman" src="assets/images/logo_woman.png" alt="여성가족부 로고"/>
-          <img class="butterknife" src="assets/images/logo_butterknife.png" alt="버터나이프 크루 로고">
-        </div>
-      </div>
-
     </div>
-
-  </div>
-</footer>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./assets/js/owl.carousel.js"></script>
   <script>
