--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             이렇게 밖에 이야기할 수 없는 거잖아요.”
         </div>
         <div class="more_main">
-            <a class="nav_menu_btn" href="./3.html">
+          <a class="nav_menu_btn" href="./3.html">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -115,12 +115,14 @@
             나만의 스타일로 소화할 수 있다면 다 좋아요.”
         </div>
         <div class="more_main">
+            <a class="nav_menu_btn" href="./4.html">
           <div class="more_btn">
             <div>MORE</div>
             <div>
               <img src="assets/images/arrow_white.png" alt="">
             </div>
           </div>
+          </a>
         </div>
       </div>
       <div class="content main7">
@@ -234,7 +236,7 @@
               사실 눈에 자꾸 보이니까 더 예뻐 보이는 거예요. 그래서 더 많이 노출시키려고 해요.
             </div>
               <div class="view">
-                  <span class="bold">랍스터룸 유빈</span>의<br/>
+                <span class="bold">랍스터룸 유빈</span>의<br/>
                 인터뷰 보러가기
               </div>
               <span class='arrow'>
@@ -244,6 +246,7 @@
             </div>
           </a>
           <img class="work_icon" src="assets/images/work.png"/>
+          <a class="nav_menu_btn" href="./4.html">
           <div class="item item4">
             <div class="subject">
               나만의 취향, 무드,<br/>
@@ -262,6 +265,7 @@
               <img class='arrow_black' src="assets/images/arrow_black.png"/>
             </span>
           </div>
+          </a>
         </div>
         <div class="col">
           <div class="logo_big"></div>
@@ -288,11 +292,12 @@
           <a class="nav_menu_btn" href="./3.html">
           <div class="item item6">
             <div class="subject">
-              나를 위한 취향, 무드 <br/>
-              스타일과 인스타그램
+              취향 공유의 기쁨과 슬픔
             </div>
             <div class="hidden">
-              취향 공유의 기쁨과 슬픔
+              취향은 정확하게 설명하기 어렵죠.
+              ‘나는 이게 좋은데 넌 안 좋아?’
+              이렇게 밖에 이야기할 수 없는 거잖아요.
             </div>
             <div class="view">
               <span class="bold">오드스튜디오 주혜</span>의<br/>
