feat. page5 img add

--- a/1.html
+++ b/1.html
@@ -146,7 +146,7 @@
             저는 부들부들한 게 좋은데 옷은 너무 싫어요. 사는 과정도 싫고 사람 몸매도 다양해서 스몰, 미디엄, 라지 나뉘는 것도 너무 싫어요. 그래서 생각하다가 제가 하는게 그래픽 디자인인데 그래픽 디자인을 크게 얹어 놓으려면 천이 네모난 게 좋잖아요. 되게 단순해요. 그래픽도 크게 얹어 놓을 수 있고 내가 좋아하는 촉감이야. 그게 끝이에요. (웃음)
           </div>
           <br/><br/><br/><br/><br/><br/><br/>
-          <img src="./assets/images/page1_phone.jpeg" alt="">
+          <img src="./assets/images/page1_phone.jpeg" alt="" style="margin-top:0;">
         </div>
 
 
